# src/api/auth/auth.dto.ts
@@ -1,0 +1,9 @@
+export interface LoginRequest {
+  username: string;
+  password: string;
+}
+
+export interface LoginResponse {
+  token: string;
+  expiresIn: string;
+}
